--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -18,7 +18,7 @@
 @import "layout/btn";
 //blocks
 @import "blocks/cols/_cols";
-@import "blocks/cols/_cols-l"
+@import "blocks/cols/_cols-l";
 @import "blocks/cols/_cols-m";
 @import "blocks/cols/_cols-s";
 @import "blocks/_gallery";
