--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -762,8 +762,8 @@ ul li {
   border-top: 1px solid #000;
 }
 .content-wrapper .content-bottom {
-  width: 1122px;
-  margin: 0 auto;
+  /*width: 1122px;
+  margin: 0 auto;*/
   padding-top: 66px;
 }
 .content-wrapper .think-us {
@@ -953,291 +953,213 @@ ul li {
   line-height: 22px;
 }
 
-.cols:after {
-  content: " ";
-  display: block;
-  height: 0;
-  clear: both;
-  overflow: hidden;
-  visibility: hidden;
+@media (max-width: 767px) {
+  .cols {
+    width: 480px;
+    margin: 0 auto;
+  }
+  .cols:after {
+    content: " ";
+    display: block;
+    height: 0;
+    clear: both;
+    overflow: hidden;
+    visibility: hidden;
+  }
+  .cols .col {
+    margin-right: 46px;
+    width: 342px;
+  }
+  .cols .col.col-3 .col-item .col-wrapper {
+    padding: 20px 0;
+  }
+  .cols .col .col-wrapper {
+    padding: 25px 25px 0 30px;
+  }
+  .cols .col .col-item {
+    -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    border-radius: 20px;
+  }
+  .cols .col .col-item h3 {
+    padding: 5px 0 6px;
+    -moz-border-radius: 18px 18px 0 0;
+    -webkit-border-radius: 18px;
+    border-radius: 18px 18px 0 0;
+  }
+  .cols .col .col-item h3 span {
+    font: normal 30px/45px voltaire;
+    height: 40px;
+    min-width: 186px;
+  }
+  .cols .col .col-item .wrapper-face {
+    padding: 20px;
+  }
+  .cols .col .col-item .col-cont {
+    padding: 20px 5px 9px 66px;
+    width: 282px;
+    margin: 0 auto 11px;
+    background: url('../images/bg/WR.png') no-repeat;
+  }
+  .cols .col .col-item .col-cont p {
+    margin: 0;
+  }
+  .cols .col .col-item .col-cont:last-child {
+    background: url('../images/bg/face.png') no-repeat;
+  }
+  .cols .col .col-item .col-event {
+    margin-bottom: 15px;
+  }
+  .cols .col .col-item .col-event h4 {
+    font: 24px/24px Montserrat-bold;
+    margin: 0 0 2px;
+  }
+  .cols .col .col-item .col-event span {
+    font: 15px/20px Montserrat;
+    margin-bottom: 10px;
+  }
+  .cols .col .col-item .col-event p {
+    line-height: 22px;
+  }
 }
-.cols .col {
-  float: left;
-  margin-right: 46px;
-  width: 342px;
+@media (min-width: 768px) and (max-width: 1249px) {
+  .cols {
+    width: 728px;
+    margin: 0 auto;
+  }
+  .cols:after {
+    content: " ";
+    display: block;
+    height: 0;
+    clear: both;
+    overflow: hidden;
+    visibility: hidden;
+  }
+  .cols .col {
+    margin-right: 46px;
+    width: 342px;
+  }
+  .cols .col.col-3 .col-item .col-wrapper {
+    padding: 20px 0;
+  }
+  .cols .col .col-wrapper {
+    padding: 25px 25px 0 30px;
+  }
+  .cols .col .col-item {
+    -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    border-radius: 20px;
+  }
+  .cols .col .col-item h3 {
+    padding: 5px 0 6px;
+    -moz-border-radius: 18px 18px 0 0;
+    -webkit-border-radius: 18px;
+    border-radius: 18px 18px 0 0;
+  }
+  .cols .col .col-item h3 span {
+    font: normal 30px/45px voltaire;
+    height: 40px;
+    min-width: 186px;
+  }
+  .cols .col .col-item .wrapper-face {
+    padding: 20px;
+  }
+  .cols .col .col-item .col-cont {
+    padding: 20px 5px 9px 66px;
+    width: 282px;
+    margin: 0 auto 11px;
+    background: url('../images/bg/WR.png') no-repeat;
+  }
+  .cols .col .col-item .col-cont p {
+    margin: 0;
+  }
+  .cols .col .col-item .col-cont:last-child {
+    background: url('../images/bg/face.png') no-repeat;
+  }
+  .cols .col .col-item .col-event {
+    margin-bottom: 15px;
+  }
+  .cols .col .col-item .col-event h4 {
+    font: 24px/24px Montserrat-bold;
+    margin: 0 0 2px;
+  }
+  .cols .col .col-item .col-event span {
+    font: 15px/20px Montserrat;
+    margin-bottom: 10px;
+  }
+  .cols .col .col-item .col-event p {
+    line-height: 22px;
+  }
 }
-.cols .col.col-3 {
-  margin: 0;
-  border: none;
+@media (min-width: 1250px) {
+  .cols {
+    width: 1122px;
+    margin: 0 auto;
+  }
+  .cols:after {
+    content: " ";
+    display: block;
+    height: 0;
+    clear: both;
+    overflow: hidden;
+    visibility: hidden;
+  }
+  .cols .col {
+    margin-right: 46px;
+    width: 342px;
+  }
+  .cols .col.col-3 .col-item .col-wrapper {
+    padding: 20px 0;
+  }
+  .cols .col .col-wrapper {
+    padding: 25px 25px 0 30px;
+  }
+  .cols .col .col-item {
+    -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    border-radius: 20px;
+  }
+  .cols .col .col-item h3 {
+    padding: 5px 0 6px;
+    -moz-border-radius: 18px 18px 0 0;
+    -webkit-border-radius: 18px;
+    border-radius: 18px 18px 0 0;
+  }
+  .cols .col .col-item h3 span {
+    font: normal 30px/45px voltaire;
+    height: 40px;
+    min-width: 186px;
+  }
+  .cols .col .col-item .wrapper-face {
+    padding: 20px;
+  }
+  .cols .col .col-item .col-cont {
+    padding: 20px 5px 9px 66px;
+    width: 282px;
+    margin: 0 auto 11px;
+    background: url('../images/bg/WR.png') no-repeat;
+  }
+  .cols .col .col-item .col-cont p {
+    margin: 0;
+  }
+  .cols .col .col-item .col-cont:last-child {
+    background: url('../images/bg/face.png') no-repeat;
+  }
+  .cols .col .col-item .col-event {
+    margin-bottom: 15px;
+  }
+  .cols .col .col-item .col-event h4 {
+    font: 24px/24px Montserrat-bold;
+    margin: 0 0 2px;
+  }
+  .cols .col .col-item .col-event span {
+    font: 15px/20px Montserrat;
+    margin-bottom: 10px;
+  }
+  .cols .col .col-item .col-event p {
+    line-height: 22px;
+  }
 }
-.cols .col.col-3 .col-item {
-  border: none;
-  background: none;
-}
-.cols .col.col-3 .col-item .col-wrapper {
-  padding: 20px 0;
-}
-.cols .col .col-wrapper {
-  padding: 25px 25px 0 30px;
-}
-.cols .col .col-item {
-  background: #fff;
-  height: 100%;
-  border: 1px solid #314c4e;
-  -moz-border-radius: 20px;
-  -webkit-border-radius: 20px;
-  border-radius: 20px;
-}
-.cols .col .col-item h3 {
-  padding: 5px 0 6px;
-  background: url('../images/bg/bg-colum-h.png') repeat-x;
-  -moz-border-radius: 18px 18px 0 0;
-  -webkit-border-radius: 18px;
-  border-radius: 18px 18px 0 0;
-  border-bottom: 1px solid #000;
-  overflow: hidden;
-  text-align: center;
-}
-.cols .col .col-item h3 span {
-  color: #fff;
-  font: normal 30px/45px voltaire;
-  text-transform: uppercase;
-  display: inline-block;
-  height: 40px;
-  min-width: 186px;
-  background: #5f1717;
-}
-.cols .col .col-item .wrapper-face {
-  padding: 20px;
-}
-.cols .col .col-item .col-cont {
-  padding: 20px 5px 9px 66px;
-  width: 282px;
-  margin: 0 auto 11px;
-  background: url('../images/bg/WR.png') no-repeat;
-  border-bottom: 1px solid #fff5f5;
-}
-.cols .col .col-item .col-cont p {
-  margin: 0;
-}
-.cols .col .col-item .col-cont:last-child {
-  background: url('../images/bg/face.png') no-repeat;
-  margin-bottom: 0;
-}
-.cols .col .col-item .col-event {
-  border-bottom: 1px solid #c2c2c2;
-  margin-bottom: 15px;
-}
-.cols .col .col-item .col-event:last-child {
-  border-bottom: none;
-}
-.cols .col .col-item .col-event h4 {
-  font: 24px/24px Montserrat-bold;
-  color: #336666;
-  margin: 0 0 2px;
-}
-.cols .col .col-item .col-event span {
-  font: 15px/20px Montserrat;
-  color: #7e7e7e;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-  display: block;
-}
-.cols .col .col-item .col-event p {
-  color: #7e7e7e;
-  line-height: 22px;
-}
-
-_cols.scss.cols:after {
-  content: " ";
-  display: block;
-  height: 0;
-  clear: both;
-  overflow: hidden;
-  visibility: hidden;
-}
-_cols.scss.cols .col {
-  float: left;
-  margin-right: 46px;
-  width: 342px;
-}
-_cols.scss.cols .col.col-3 {
-  margin: 0;
-  border: none;
-}
-_cols.scss.cols .col.col-3 .col-item {
-  border: none;
-  background: none;
-}
-_cols.scss.cols .col.col-3 .col-item .col-wrapper {
-  padding: 20px 0;
-}
-_cols.scss.cols .col .col-wrapper {
-  padding: 25px 25px 0 30px;
-}
-_cols.scss.cols .col .col-item {
-  background: #fff;
-  height: 100%;
-  border: 1px solid #314c4e;
-  -moz-border-radius: 20px;
-  -webkit-border-radius: 20px;
-  border-radius: 20px;
-}
-_cols.scss.cols .col .col-item h3 {
-  padding: 5px 0 6px;
-  background: url('../images/bg/bg-colum-h.png') repeat-x;
-  -moz-border-radius: 18px 18px 0 0;
-  -webkit-border-radius: 18px;
-  border-radius: 18px 18px 0 0;
-  border-bottom: 1px solid #000;
-  overflow: hidden;
-  text-align: center;
-}
-_cols.scss.cols .col .col-item h3 span {
-  color: #fff;
-  font: normal 30px/45px voltaire;
-  text-transform: uppercase;
-  display: inline-block;
-  height: 40px;
-  min-width: 186px;
-  background: #5f1717;
-}
-_cols.scss.cols .col .col-item .wrapper-face {
-  padding: 20px;
-}
-_cols.scss.cols .col .col-item .col-cont {
-  padding: 20px 5px 9px 66px;
-  width: 282px;
-  margin: 0 auto 11px;
-  background: url('../images/bg/WR.png') no-repeat;
-  border-bottom: 1px solid #fff5f5;
-}
-_cols.scss.cols .col .col-item .col-cont p {
-  margin: 0;
-}
-_cols.scss.cols .col .col-item .col-cont:last-child {
-  background: url('../images/bg/face.png') no-repeat;
-  margin-bottom: 0;
-}
-_cols.scss.cols .col .col-item .col-event {
-  border-bottom: 1px solid #c2c2c2;
-  margin-bottom: 15px;
-}
-_cols.scss.cols .col .col-item .col-event:last-child {
-  border-bottom: none;
-}
-_cols.scss.cols .col .col-item .col-event h4 {
-  font: 24px/24px Montserrat-bold;
-  color: #336666;
-  margin: 0 0 2px;
-}
-_cols.scss.cols .col .col-item .col-event span {
-  font: 15px/20px Montserrat;
-  color: #7e7e7e;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-  display: block;
-}
-_cols.scss.cols .col .col-item .col-event p {
-  color: #7e7e7e;
-  line-height: 22px;
-}
-
-.cols:after {
-  content: " ";
-  display: block;
-  height: 0;
-  clear: both;
-  overflow: hidden;
-  visibility: hidden;
-}
-.cols .col {
-  float: left;
-  margin-right: 46px;
-  width: 342px;
-}
-.cols .col.col-3 {
-  margin: 0;
-  border: none;
-}
-.cols .col.col-3 .col-item {
-  border: none;
-  background: none;
-}
-.cols .col.col-3 .col-item .col-wrapper {
-  padding: 20px 0;
-}
-.cols .col .col-wrapper {
-  padding: 25px 25px 0 30px;
-}
-.cols .col .col-item {
-  background: #fff;
-  height: 100%;
-  border: 1px solid #314c4e;
-  -moz-border-radius: 20px;
-  -webkit-border-radius: 20px;
-  border-radius: 20px;
-}
-.cols .col .col-item h3 {
-  padding: 5px 0 6px;
-  background: url('../images/bg/bg-colum-h.png') repeat-x;
-  -moz-border-radius: 18px 18px 0 0;
-  -webkit-border-radius: 18px;
-  border-radius: 18px 18px 0 0;
-  border-bottom: 1px solid #000;
-  overflow: hidden;
-  text-align: center;
-}
-.cols .col .col-item h3 span {
-  color: #fff;
-  font: normal 30px/45px voltaire;
-  text-transform: uppercase;
-  display: inline-block;
-  height: 40px;
-  min-width: 186px;
-  background: #5f1717;
-}
-.cols .col .col-item .wrapper-face {
-  padding: 20px;
-}
-.cols .col .col-item .col-cont {
-  padding: 20px 5px 9px 66px;
-  width: 282px;
-  margin: 0 auto 11px;
-  background: url('../images/bg/WR.png') no-repeat;
-  border-bottom: 1px solid #fff5f5;
-}
-.cols .col .col-item .col-cont p {
-  margin: 0;
-}
-.cols .col .col-item .col-cont:last-child {
-  background: url('../images/bg/face.png') no-repeat;
-  margin-bottom: 0;
-}
-.cols .col .col-item .col-event {
-  border-bottom: 1px solid #c2c2c2;
-  margin-bottom: 15px;
-}
-.cols .col .col-item .col-event:last-child {
-  border-bottom: none;
-}
-.cols .col .col-item .col-event h4 {
-  font: 24px/24px Montserrat-bold;
-  color: #336666;
-  margin: 0 0 2px;
-}
-.cols .col .col-item .col-event span {
-  font: 15px/20px Montserrat;
-  color: #7e7e7e;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-  display: block;
-}
-.cols .col .col-item .col-event p {
-  color: #7e7e7e;
-  line-height: 22px;
-}
-
 .b-gallery {
   height: 504px;
 }
