--- a/scss/common/_defaults.scss
+++ b/scss/common/_defaults.scss
@@ -6,7 +6,7 @@ body {
 	min-height: 100%;
 	height: 100%;
 	font-size: 13px;
-	min-width: 1300px;
+	/*min-width: 1300px;*/
 	background: image-url("bg/bg.jpg");
 	font-family: $Montserrat;
 	line-height: 1.6;
