--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,6 +15,19 @@
 @import "layout/content";
 @import "layout/footer";
 @import "layout/site-container/_site-container";
+@media (max-width: $width-tablet - 1) {
+  //layout
+  @import "layout/site-container/_site-container-s";
+}
+@media (min-width: $width-tablet) and (max-width: $width + 29) {
+  //layout
+  @import "layout/site-container/_site-container-m";
+}
+@media (min-width: $width + 30) {
+  //layout
+  @import "layout/site-container/_site-container-l";
+}
+
 @import "layout/btn";
 //blocks
 
