--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -436,7 +436,7 @@ body {
   min-height: 100%;
   height: 100%;
   font-size: 13px;
-  min-width: 1300px;
+  /*min-width: 1300px;*/
   background: url('../images/bg/bg.jpg');
   font-family: Montserrat;
   line-height: 1.6;
@@ -823,6 +823,21 @@ ul li {
   visibility: hidden;
 }
 
+@media (max-width: 767px) {
+  .site-container {
+    width: 90%;
+  }
+}
+@media (min-width: 768px) and (max-width: 1249px) {
+  .site-container {
+    width: 728px;
+  }
+}
+@media (min-width: 1250px) {
+  .site-container {
+    width: 1220px;
+  }
+}
 .btn-wrapper {
   margin: 30px 0;
 }
@@ -858,6 +873,9 @@ ul li {
   color: red;
 }
 
+.cols {
+  margin: 0 auto;
+}
 .cols:after {
   content: " ";
   display: block;
@@ -955,209 +973,17 @@ ul li {
 
 @media (max-width: 767px) {
   .cols {
-    width: 480px;
-    margin: 0 auto;
-  }
-  .cols:after {
-    content: " ";
-    display: block;
-    height: 0;
-    clear: both;
-    overflow: hidden;
-    visibility: hidden;
-  }
-  .cols .col {
-    margin-right: 46px;
     width: 342px;
-  }
-  .cols .col.col-3 .col-item .col-wrapper {
-    padding: 20px 0;
-  }
-  .cols .col .col-wrapper {
-    padding: 25px 25px 0 30px;
-  }
-  .cols .col .col-item {
-    -moz-border-radius: 20px;
-    -webkit-border-radius: 20px;
-    border-radius: 20px;
-  }
-  .cols .col .col-item h3 {
-    padding: 5px 0 6px;
-    -moz-border-radius: 18px 18px 0 0;
-    -webkit-border-radius: 18px;
-    border-radius: 18px 18px 0 0;
-  }
-  .cols .col .col-item h3 span {
-    font: normal 30px/45px voltaire;
-    height: 40px;
-    min-width: 186px;
-  }
-  .cols .col .col-item .wrapper-face {
-    padding: 20px;
-  }
-  .cols .col .col-item .col-cont {
-    padding: 20px 5px 9px 66px;
-    width: 282px;
-    margin: 0 auto 11px;
-    background: url('../images/bg/WR.png') no-repeat;
-  }
-  .cols .col .col-item .col-cont p {
-    margin: 0;
-  }
-  .cols .col .col-item .col-cont:last-child {
-    background: url('../images/bg/face.png') no-repeat;
-  }
-  .cols .col .col-item .col-event {
-    margin-bottom: 15px;
-  }
-  .cols .col .col-item .col-event h4 {
-    font: 24px/24px Montserrat-bold;
-    margin: 0 0 2px;
-  }
-  .cols .col .col-item .col-event span {
-    font: 15px/20px Montserrat;
-    margin-bottom: 10px;
-  }
-  .cols .col .col-item .col-event p {
-    line-height: 22px;
   }
 }
 @media (min-width: 768px) and (max-width: 1249px) {
   .cols {
-    width: 728px;
-    margin: 0 auto;
-  }
-  .cols:after {
-    content: " ";
-    display: block;
-    height: 0;
-    clear: both;
-    overflow: hidden;
-    visibility: hidden;
-  }
-  .cols .col {
-    margin-right: 46px;
     width: 342px;
-  }
-  .cols .col.col-3 .col-item .col-wrapper {
-    padding: 20px 0;
-  }
-  .cols .col .col-wrapper {
-    padding: 25px 25px 0 30px;
-  }
-  .cols .col .col-item {
-    -moz-border-radius: 20px;
-    -webkit-border-radius: 20px;
-    border-radius: 20px;
-  }
-  .cols .col .col-item h3 {
-    padding: 5px 0 6px;
-    -moz-border-radius: 18px 18px 0 0;
-    -webkit-border-radius: 18px;
-    border-radius: 18px 18px 0 0;
-  }
-  .cols .col .col-item h3 span {
-    font: normal 30px/45px voltaire;
-    height: 40px;
-    min-width: 186px;
-  }
-  .cols .col .col-item .wrapper-face {
-    padding: 20px;
-  }
-  .cols .col .col-item .col-cont {
-    padding: 20px 5px 9px 66px;
-    width: 282px;
-    margin: 0 auto 11px;
-    background: url('../images/bg/WR.png') no-repeat;
-  }
-  .cols .col .col-item .col-cont p {
-    margin: 0;
-  }
-  .cols .col .col-item .col-cont:last-child {
-    background: url('../images/bg/face.png') no-repeat;
-  }
-  .cols .col .col-item .col-event {
-    margin-bottom: 15px;
-  }
-  .cols .col .col-item .col-event h4 {
-    font: 24px/24px Montserrat-bold;
-    margin: 0 0 2px;
-  }
-  .cols .col .col-item .col-event span {
-    font: 15px/20px Montserrat;
-    margin-bottom: 10px;
-  }
-  .cols .col .col-item .col-event p {
-    line-height: 22px;
   }
 }
 @media (min-width: 1250px) {
   .cols {
     width: 1122px;
-    margin: 0 auto;
-  }
-  .cols:after {
-    content: " ";
-    display: block;
-    height: 0;
-    clear: both;
-    overflow: hidden;
-    visibility: hidden;
-  }
-  .cols .col {
-    margin-right: 46px;
-    width: 342px;
-  }
-  .cols .col.col-3 .col-item .col-wrapper {
-    padding: 20px 0;
-  }
-  .cols .col .col-wrapper {
-    padding: 25px 25px 0 30px;
-  }
-  .cols .col .col-item {
-    -moz-border-radius: 20px;
-    -webkit-border-radius: 20px;
-    border-radius: 20px;
-  }
-  .cols .col .col-item h3 {
-    padding: 5px 0 6px;
-    -moz-border-radius: 18px 18px 0 0;
-    -webkit-border-radius: 18px;
-    border-radius: 18px 18px 0 0;
-  }
-  .cols .col .col-item h3 span {
-    font: normal 30px/45px voltaire;
-    height: 40px;
-    min-width: 186px;
-  }
-  .cols .col .col-item .wrapper-face {
-    padding: 20px;
-  }
-  .cols .col .col-item .col-cont {
-    padding: 20px 5px 9px 66px;
-    width: 282px;
-    margin: 0 auto 11px;
-    background: url('../images/bg/WR.png') no-repeat;
-  }
-  .cols .col .col-item .col-cont p {
-    margin: 0;
-  }
-  .cols .col .col-item .col-cont:last-child {
-    background: url('../images/bg/face.png') no-repeat;
-  }
-  .cols .col .col-item .col-event {
-    margin-bottom: 15px;
-  }
-  .cols .col .col-item .col-event h4 {
-    font: 24px/24px Montserrat-bold;
-    margin: 0 0 2px;
-  }
-  .cols .col .col-item .col-event span {
-    font: 15px/20px Montserrat;
-    margin-bottom: 10px;
-  }
-  .cols .col .col-item .col-event p {
-    line-height: 22px;
   }
 }
 .b-gallery {
