adaptiv nav and logo - ostalos top menu

--- a/scss/layout/header/_header.scss
+++ b/scss/layout/header/_header.scss
@@ -71,6 +71,8 @@
 		border-top: 1px solid #131d1d;
 		border-bottom: 1px solid #4d4d2f;
 
+    #touch-menu {display: none;}
+
 		ul {
 			margin: 0 auto;
 			display: table;
