--- a/scss/layout/header/_header-s.scss
+++ b/scss/layout/header/_header-s.scss
@@ -1,143 +1,163 @@
 .site-header {
-	background: image_url("bg/header-bg.jpg") no-repeat 0 40px;
-	height: 324px;
-	@include background-size(100% 80%);
-	position: relative;
+  background: image_url("bg/header-bg.jpg") no-repeat 0 40px;
+  height: 324px;
+  @include background-size(100% 80%);
+  position: relative;
 
-	.top-menu {
-		height: 41px;
-		background: black;
-		@include box-shadow(0px 5px 14px 0px rgba(0, 0, 0, 0.35));
+  .top-menu {
+    height: 41px;
+    background: black;
+    @include box-shadow(0px 5px 14px 0px rgba(0, 0, 0, 0.35));
 
-		ul {
-			margin: 0 auto;
-			padding-left: 75px;
-			display: table;
+    ul {
+      margin: 0 auto;
+      padding-left: 75px;
+      display: table;
 
-			li {
-				display: table-cell;
-				color: #fff;
-				list-style: none;
-				padding: 0 25px;
+      li {
+        display: table-cell;
+        color: #fff;
+        list-style: none;
+        padding: 0 3px; //pravka
 
-				&.img {
-					vertical-align: top;
-				}
+        &.img {
+          vertical-align: top;
+        }
 
-				&.active-trail {
-				}
+        &.active-trail {
+        }
 
-				a {
-					color: #86827c;
-					font: 17px/41px $Gotham;
-					letter-spacing: 0.5px;
-					text-decoration: none;
-					text-transform: uppercase;
-					@include transition(all 0.3s);
+        a {
+          color: #86827c;
+          font: 13px/41px $Gotham; //pravka
+          letter-spacing: 0.5px;
+          text-decoration: none;
+          text-transform: uppercase;
+          @include transition(all 0.3s);
 
-					&:hover {
-						color: #fff;
-					}
+          &:hover {
+            color: #fff;
+          }
 
-					&.active-trail {
-						color: #fff;
-					}
-				}
-			}
-		}
-	}
+          &.active-trail {
+            color: #fff;
+          }
+        }
+      }
+    }
+  }
 
-	.logo {
-		text-align: center;
+  .logo {
+    text-align: center;
 
-		a {
-			position: relative;
-			top: 40px;
+    a {
+      position: relative;
+      top: 40px;
+      img{
+        width: 100%;
+        height: auto;
+      }
 
-			h1 {
-				@include text-hide();
-			}
-		}
-	}
+      h1 {
+        @include text-hide();
+      }
+    }
+  }
 
-	.nav {
-		position: absolute;
-		bottom: 0;
-		height: 41px;
-		margin: 0;
-		background: image_url("bg/menu-wood.jpg");
-		@include box-shadow(0px 5px 14px 0px rgba(0, 0, 0, 0.35));
-		width: 100%;
-		border-top: 1px solid #131d1d;
-		border-bottom: 1px solid #4d4d2f;
 
-		ul {
-			margin: 0 auto;
-			display: table;
-			padding: 0;
-			border-left: 1px solid #131d1d;
-			border-right: 1px solid #4d4d2f;
+  .nav {
+    position: absolute;
+    bottom: 0;
+    height: 41px;
+    margin: 0;
+    background: image_url("bg/menu-wood.jpg");
+    @include box-shadow(0px 5px 14px 0px rgba(0, 0, 0, 0.35));
+    width: 100%;
+    border-top: 1px solid #131d1d;
+    border-bottom: 1px solid #4d4d2f;
 
-			li {
-				display: table-cell;
-				color: #fff;
-				list-style: none;
-				border-color: transparent #131d1d transparent #4d4d2f;
-				border-style: solid;
-				border-width: 0 1px;
-				margin: 0;
-				padding: 0;
+    #touch-menu {
+      display: block;
+      width: 100%;
+      height: 41px;
+      color: #fff;
+      padding: 12px 10px;
+      font: 12px $Montserrat;
+      text-decoration: none;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+    }
 
-				a {
-					color: #FFF;
-					display: block;
-					padding: 11px 35px;
-					letter-spacing: 3px;
-					font: 14px $Montserrat;
-					text-decoration: none;
-					text-transform: uppercase;
-					@include transition(all 0.3s);
+    ul {
+      margin: 0 auto;
+      display: none;
+      padding: 0;
+      position: absolute;
+      z-index: 1;
+      border-left: 1px solid #131d1d;
+      border-right: 1px solid #4d4d2f;
 
-					&:hover {
-						color: gray;
-					}
+      li {
+        display: list-item;
+        color: #fff;
+        list-style: none;
+        border-color: transparent #131d1d transparent #4d4d2f;
+        border-style: solid;
+        border-width: 0 1px;
+        margin: 0;
+        padding: 0;
+        background: image_url("bg/menu-wood.jpg");
 
-					&.active-trail {
-						background: #FFF url('../images/bg/menu-wood.jpg') no-repeat 60%;
-						background-blend-mode: hard-light;
-					}
-				}
-			}
-		}
-	}
+        a {
+          color: #FFF;
+          display: block;
+          padding: 12px 10px;
+          letter-spacing: 3px;
+          font: 12px $Montserrat;
+          text-decoration: none;
+          text-transform: uppercase;
+          @include transition(all 0.3s);
 
-	.social-share {
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		margin: 5px auto;
-		background: image_url("bg/social-wood-menu.png");
-		width: 282px;
-		height: 85px;
-		padding: 15px;
+          &:hover {
+            color: gray;
+          }
 
-		a {
-			display: inline-block;
-			margin-left: 5px;
-			@include transition(all 0.3s);
+          &.active-trail {
+            background: #FFF url('../images/bg/menu-wood.jpg') no-repeat 60%;
+            background-blend-mode: hard-light;
+          }
+        }
+      }
+    }
+  }
 
-			&:hover {
-				opacity: 0.6;
-			}
+  .social-share {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 5px auto;
+    background: image_url("bg/social-wood-menu.png");
+    width: 282px;
+    height: 85px;
+    padding: 15px;
 
-			$sprs: colo, facebook, twitter, zw;
-			@each $spr in $sprs {
+    a {
+      display: inline-block;
+      margin-left: 5px;
+      @include transition(all 0.3s);
 
-				&.#{$spr} {
-					@include oneline-sprite-box($icons, $spr);
-				}
-			}
-		}
-	}
+      &:hover {
+        opacity: 0.6;
+      }
+
+      $sprs: colo, facebook, twitter, zw;
+      @each $spr in $sprs {
+
+        &.#{$spr} {
+          @include oneline-sprite-box($icons, $spr);
+        }
+      }
+    }
+  }
 }
